[781009] fix alignment

--- a/src/packages/blocks/studio-store-ecommerce-components/src/AddOrRemoveQuantity/css/index.scoped.css
+++ b/src/packages/blocks/studio-store-ecommerce-components/src/AddOrRemoveQuantity/css/index.scoped.css
@@ -20,16 +20,17 @@
     border-color: var(--color-light-grey-3);
     -moz-appearance: textfield;
     text-align: center;
-    padding: 4px 0 !important;
+    /* padding: 4px 0 !important; */
 }
-/* .product-quantity-container input.form-control{
+.product-quantity-container .form-control{
     text-indent: 10px !important;
-} */
+}
 .product-quantity-container .btn.plus {
     color: white;
     background-color: var(--color-cyan);
     border-color: var(--color-cyan) !important;
 }
+
 @media screen and (max-width:767.4px) {
     .product-quantity-container input.form-control{
         text-indent: 0px !important;
